--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.2.3
-Flask-CORS==3.0.10
-requests==2.28.2
+flask[async]==2.0.1
+werkzeug==2.0.1
+flask-cors==3.0.10
 python-dotenv==1.0.0
-aiohttp
+aiohttp==3.8.5
